# CRM

./: .env.example  .gitignore  AUTH_README.md  README.md  index.html  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
app/: __init__.py  data.py  database.py  dependencies.py  main.py  models.py  schemas.py  scraper.py  security.py  tasks.py
app/ai/: __init__.py  config.py  generators.py  pipeline.py  prompt_templates.py  retriever.py  validators.py
app/api/: ai.py  change_log.py  diff.py  seo.py
app/core/: __init__.py  config.py  logging_config.py  security.py
app/db/: __init__.py  session.py
app/routers/: __init__.py  appointments.py  auth.py  calendar.py  campaigns.py  contacts.py  inbox.py  interactions.py  leads.py  logs.py  media.py  pipeline.py  review.py  users.py  webhooks.py
app/schemas/: __init__.py  appointments.py  auth.py  calendar.py  campaigns.py  contacts.py  inbox.py  interactions.py  leads.py  logs.py  media.py  pipeline.py  review.py  users.py  webhooks.py
app/tasks/: __init__.py  celery_app.py  tasks.py
app/utils/: __init__.py  files.py
backend/app/: main.py
frontend/: jest.config.ts  package.json
migrations/: 2025_05_30_001_initial_schema.sql
src/: App.tsx  index.css  main.tsx
src/__tests__/: test-utils.tsx
src/app/: layout.tsx
src/components/: DiffViewer.tsx  InboxThread.tsx  LeadCard.tsx  MessageBubble.tsx  PromptRunnerModal.tsx  Sidebar.tsx  (+2 more)
tests/: conftest.py  test_auth.py  test_contacts.py  test_scraper.py  test_tasks.py  test_webhooks.py
(+121 files in other folders)
